--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
             background: yellow;
         }
     </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script>
         function change(idName) {
             if (document.getElementById(idName).style.display === 'none') {
@@ -79,8 +80,6 @@
 
             }
         }
-
-
     </script>
 </head>
 <body>
