--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,6 @@
         // должно быть масштабируемо:
         // код работает без изменений при добавлении новых столбцов и строк
         window.onload = function() {
-            let hide = document.getElementsByClassName('no-result');
-            hide.style.display = "none";
             let phraser = document.getElementById('search');
             let grid = document.getElementById('grid');
             grid.onclick = function (e) {
@@ -122,11 +120,11 @@
             let sumAverCheckMale = 0;
             let sumAverCheckFemale =0;
             let list1= []; // массив
-
+            let chekPoint = false;
             for (let i = 3; i < table.rows.length; i++) {
-                if (table.rows[i].style.display != "none") {
+                if (table.rows[i].style.display !== "none") {
                     orderCount++;
-                    totalPay = Math.round(parseFloat(table.rows[i].cells[3].innerHTML.replace('$', ''))*1000)/1000
+                    totalPay = Math.round(parseFloat(table.rows[i].cells[3].innerHTML.replace('$', ''))*1000)/1000;
                     sum += totalPay;
                     list1.push(totalPay);
                     if(table.rows[i].cells[1].firstChild.innerHTML.indexOf('Mr.') === 0){
@@ -135,15 +133,25 @@
                     else{
                         sumAverCheckFemale++;
                     }
+                    chekPoint =true;
                 }
             }
-
-            document.getElementById('order_count').innerHTML = orderCount;
-            document.getElementById('orders_total').innerHTML = '$'+roundTwo(sum);
-            document.getElementById('median').innerHTML = '$'+roundTwo(median1(list1));
-            document.getElementById('average_check').innerHTML = '$'+roundTwo(sum / orderCount);
-            document.getElementById('sumAverCheckFemale').innerHTML = sumAverCheckFemale;
-            document.getElementById('sumAverCheckMale').innerHTML = sumAverCheckMale;
+if(chekPoint){
+    document.getElementById('order_count').innerHTML = orderCount;
+    document.getElementById('orders_total').innerHTML = '$'+roundTwo(sum);
+    document.getElementById('median').innerHTML = '$'+roundTwo(median1(list1));
+    document.getElementById('average_check').innerHTML = '$'+roundTwo(sum / orderCount);
+    document.getElementById('sumAverCheckFemale').innerHTML = sumAverCheckFemale;
+    document.getElementById('sumAverCheckMale').innerHTML = sumAverCheckMale;
+}
+else {
+    document.getElementById('order_count').innerHTML = "NA";
+    document.getElementById('orders_total').innerHTML = "NA";
+    document.getElementById('median').innerHTML = "NA";
+    document.getElementById('average_check').innerHTML = "NA";
+    document.getElementById('sumAverCheckFemale').innerHTML = "NA";
+    document.getElementById('sumAverCheckMale').innerHTML = "NA";
+}
         }
 
         function median1(values) {
